--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,6 @@
+- name: Run Python Script
+  uses: jannekem/run-python-script-action@v1.0
+
 # This is a basic workflow to help you get started with Actions
 
 name: CI
